--- a/pages/943.html
+++ b/pages/943.html
@@ -923,7 +923,7 @@ margin-left: 0em;
 </li>
 
 <li id="Brown61">
-<p><a class="existingWikiWord" href="/nlab/show/Ronnie+Brown">Ronnie Brown</a>, Some problems of algebraic topology: a study of function spaces, function complexes, and FD-complexes, DPhil thesis, Oxford University, 1961 (Note: the Appendix of this thesis was withdrawn from the examination.) <a href="http://groupoids.org.uk/RBThesis1961.pdf">(pdf)</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Ronnie+Brown">Ronnie Brown</a>, Some problems of algebraic topology: a study of function spaces, function complexes, and FD-complexes, DPhil thesis, Oxford University, 1961 (Note: the Appendix of this thesis was withdrawn from the examination.) <a href="https://ora.ox.ac.uk/objects/uuid:3af55800-4be7-462f-b91d-9769a6dac2c4">(pdf)</a></p>
 </li>
 
 <li id="Brown63">
@@ -992,14 +992,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  6, 2018 at 12:22:42.
+  Last revised on December  7, 2018 at 10:15:11.
   See the <a href="https://ncatlab.org/nlab/history/convenient category of topological spaces" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/convenient+category+of+topological+spaces" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/convenient+category+of+topological+spaces/42" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(42 revisions)</span> | <a href="/nlab/show/diff/convenient+category+of+topological+spaces" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/convenient+category+of+topological+spaces" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/convenient+category+of+topological+spaces" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/convenient+category+of+topological+spaces/43" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(43 revisions)</span> | <a href="/nlab/show/diff/convenient+category+of+topological+spaces" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/convenient+category+of+topological+spaces" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/convenient category of topological spaces/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
