--- a/pages/19985.html
+++ b/pages/19985.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      associative n-categories in nLab
+      associative n-category in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      associative n-categories
+      associative n-category
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9358/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9358/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -308,36 +308,308 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
-<body>
-<p>The theory of <em>associative <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-categories</em> (ANCs) is a model of higher category theory with strictly associative composition, developed by <a href="https://www.cs.ox.ac.uk/people/christoph.dorn/">Christoph Dorn</a>, <a href="https://www.maths.ox.ac.uk/people/christopher.douglas">Christopher Douglas</a> and <a href="https://www.cs.bham.ac.uk/~vicaryjo/">Jamie Vicary</a>. The theory is weakly unital, but has a canonical strictly-unital subtheory to which it can easily be restricted. Despite these strictness properties, it is conjectured that every weak <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-category is weakly equivalent to an associative <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-category with strict units.</p>
+    <p>
+</p>
 
-<p>All the weak structure of an ANC lives in a notion of homotopy between composites. This is similar to the case of a <a class="existingWikiWord" href="/nlab/show/Gray+category">Gray category</a>, which is strictly associative and unital, but which has weak interchangers. In this sense, ANCs can be seen as a generalization of Gray categories.</p>
+<div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
 
-<p>This theory forms the basis for <a class="existingWikiWord" href="/nlab/show/homotopy.io">homotopy.io</a>, a proof assistant for higher category theory which is currently under development.</p>
-</body></html>
+<h4 id='higher_category_theory'>Higher category theory</h4>
 
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/higher+category+theory'>higher category theory</a></strong></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a></li>
+</ul>
+
+<h2 id='basic_concepts'>Basic concepts</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/k-morphism'>k-morphism</a>, <a class='existingWikiWord' href='/nlab/show/coherence+law'>coherence</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/looping'>looping and delooping</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/stabilization'>looping and suspension</a></li>
+</ul>
+
+<h2 id='basic_theorems'>Basic theorems</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/homotopy+hypothesis'>homotopy hypothesis</a>-theorem</li>
+
+<li><a class='existingWikiWord' href='/nlab/show/delooping+hypothesis'>delooping hypothesis</a>-theorem</li>
+
+<li><a class='existingWikiWord' href='/nlab/show/periodic+table'>periodic table</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/stabilization+hypothesis'>stabilization hypothesis</a>-theorem</li>
+
+<li><a class='existingWikiWord' href='/michaelshulman/show/exactness+hypothesis' title='michaelshulman'>exactness hypothesis</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/holographic+principle+of+higher+category+theory'>holographic principle</a></li>
+</ul>
+
+<h2 id='applications'>Applications</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/applications+of+%28higher%29+category+theory'>applications of (higher) category theory</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/higher+category+theory+and+physics'>higher category theory and physics</a></li>
+</ul>
+
+<h2 id='models'>Models</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/%28n%2Cr%29-category'>(n,r)-category</a>
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Theta-space'>Theta-space</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/infinity-category'>∞-category</a>/<a class='existingWikiWord' href='/nlab/show/infinity-category'>∞-category</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/%28infinity%2Cn%29-category'>(∞,n)-category</a>
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/n-fold+complete+Segal+space'>n-fold complete Segal space</a></li>
+</ul>
+</li>
+
+<li><a class='existingWikiWord' href='/nlab/show/%28infinity%2C2%29-category'>(∞,2)-category</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-category</a>
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/quasi-category'>quasi-category</a>
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/algebraic+quasi-category'>algebraic quasi-category</a></li>
+</ul>
+</li>
+
+<li><a class='existingWikiWord' href='/nlab/show/simplicially+enriched+category'>simplicially enriched category</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/complete+Segal+space'>complete Segal space</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/model+category'>model category</a></li>
+</ul>
+</li>
+
+<li><a class='existingWikiWord' href='/nlab/show/%28infinity%2C0%29-category'>(∞,0)-category</a>/<a class='existingWikiWord' href='/nlab/show/infinity-groupoid'>∞-groupoid</a>
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Kan+complex'>Kan complex</a>
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/algebraic+Kan+complex'>algebraic Kan complex</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/simplicial+T-complex'>simplicial T-complex</a></li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li><a class='existingWikiWord' href='/nlab/show/n-category'>n-category</a> = (n,n)-category
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a>, <a class='existingWikiWord' href='/nlab/show/%282%2C1%29-category'>(2,1)-category</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/1-category'>1-category</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/0-category'>0-category</a></li>
+
+<li><span class='newWikiWord'>(?1)-category<a href='/nlab/new/%28%3F1%29-category'>?</a></span></li>
+
+<li><span class='newWikiWord'>(?2)-category<a href='/nlab/new/%28%3F2%29-category'>?</a></span></li>
+</ul>
+</li>
+
+<li><a class='existingWikiWord' href='/nlab/show/n-poset'>n-poset</a> = <a class='existingWikiWord' href='/nlab/show/n-poset'>(n-1,n)-category</a>
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/partial+order'>poset</a> = <a class='existingWikiWord' href='/nlab/show/%280%2C1%29-category'>(0,1)-category</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/2-poset'>2-poset</a> = <a class='existingWikiWord' href='/nlab/show/2-poset'>(1,2)-category</a></li>
+</ul>
+</li>
+
+<li><a class='existingWikiWord' href='/nlab/show/n-groupoid'>n-groupoid</a> = (n,0)-category
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/2-groupoid'>2-groupoid</a>, <a class='existingWikiWord' href='/nlab/show/3-groupoid'>3-groupoid</a></li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li><a class='existingWikiWord' href='/nlab/show/vertical+categorification'>categorification</a>/<a class='existingWikiWord' href='/nlab/show/decategorification'>decategorification</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/geometric+definition+of+higher+categories'>geometric definition of higher category</a>
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Kan+complex'>Kan complex</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/quasi-category'>quasi-category</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/simplicial+model+for+weak+omega-categories'>simplicial model for weak ∞-categories</a>
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/complicial+set'>complicial set</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/weak+complicial+set'>weak complicial set</a></li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li><a class='existingWikiWord' href='/nlab/show/algebraic+definition+of+higher+categories'>algebraic definition of higher category</a>
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/bicategory'>bicategory</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/bigroupoid'>bigroupoid</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/tricategory'>tricategory</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/tetracategory'>tetracategory</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/strict+n-category'>strict ∞-category</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/Batanin+omega-category'>Batanin ∞-category</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/Trimble+n-category'>Trimble ∞-category</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/Grothendieck-Maltsiniotis+infinity-category'>Grothendieck-Maltsiniotis ∞-categories</a></li>
+</ul>
+</li>
+
+<li><a class='existingWikiWord' href='/nlab/show/stable+homotopy+theory'>stable homotopy theory</a>
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+category'>symmetric monoidal category</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+%28infinity%2C1%29-category'>symmetric monoidal (∞,1)-category</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/stable+%28infinity%2C1%29-category'>stable (∞,1)-category</a>
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/dg-category'>dg-category</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/A-infinity-category'>A-∞ category</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/triangulated+category'>triangulated category</a></li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+
+<h2 id='morphisms'>Morphisms</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/k-morphism'>k-morphism</a>
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/2-morphism'>2-morphism</a></li>
+</ul>
+</li>
+
+<li><a class='existingWikiWord' href='/nlab/show/transfor'>transfor</a>
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/natural+transformation'>natural transformation</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/modification'>modification</a></li>
+</ul>
+</li>
+</ul>
+
+<h2 id='functors'>Functors</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/functor'>functor</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/2-functor'>2-functor</a>
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/pseudofunctor'>pseudofunctor</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/lax+functor'>lax functor</a></li>
+</ul>
+</li>
+
+<li><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-functor'>(∞,1)-functor</a></li>
+</ul>
+
+<h2 id='universal_constructions'>Universal constructions</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/2-limit'>2-limit</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/adjoint+%28infinity%2C1%29-functor'>(∞,1)-adjunction</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-Kan+extension'>(∞,1)-Kan extension</a>
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/%28%E2%88%9E%2C1%29-limit'>(∞,1)-limit</a></li>
+</ul>
+</li>
+
+<li><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-Grothendieck+construction'>(∞,1)-Grothendieck construction</a></li>
+</ul>
+
+<h2 id='extra_properties_and_structure'>Extra properties and structure</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/cosmic+cube'>cosmic cube</a>
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/k-tuply+monoidal+n-category'>k-tuply monoidal n-category</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/strict+n-category'>strict ∞-category</a>, <a class='existingWikiWord' href='/nlab/show/strict+omega-groupoid'>strict ∞-groupoid</a></li>
+</ul>
+</li>
+
+<li><a class='existingWikiWord' href='/nlab/show/stable+%28infinity%2C1%29-category'>stable (∞,1)-category</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-topos</a></li>
+</ul>
+
+<h2 id='1categorical_presentations'>1-categorical presentations</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/homotopical+category'>homotopical category</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/model+category'>model category theory</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/enriched+category+theory'>enriched category theory</a></li>
+</ul>
+<div>
+<p>
+  <a href='/nlab/edit/higher+category+theory+-+contents'>Edit this sidebar</a>
+</p>
+</div></div>
+</div>
+</div>
+
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p>The theory of <em>associative <math class='maruku-mathml' display='inline' id='mathml_c10046c66642f396ade7e7cabe60b02847fc36f7_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-categories</em> (ANCs) is a model of <a class='existingWikiWord' href='/nlab/show/higher+category+theory'>higher category theory</a> with strictly <a class='existingWikiWord' href='/nlab/show/associativity'>associative</a> <a class='existingWikiWord' href='/nlab/show/composition'>composition</a>, developed by <a href='https://www.cs.ox.ac.uk/people/christoph.dorn/'>Christoph Dorn</a>, <a href='https://www.maths.ox.ac.uk/people/christopher.douglas'>Christopher Douglas</a> and <a href='https://www.cs.bham.ac.uk/~vicaryjo/'>Jamie Vicary</a>. The theory is weakly unital, but has a canonical strictly-unital subtheory to which it can easily be restricted. Despite these strictness properties, it is conjectured that every <a class='existingWikiWord' href='/nlab/show/n-category'>weak n-category</a> is weakly equivalent to an associative <math class='maruku-mathml' display='inline' id='mathml_c10046c66642f396ade7e7cabe60b02847fc36f7_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-category with strict units.</p>
+
+<p>All the weak structure of an ANC lives in a notion of homotopy between composites. This is similar to the case of a <a class='existingWikiWord' href='/nlab/show/Gray-category'>Gray category</a>, which is strictly associative and unital, but which has weak interchangers. In this sense, ANCs can be seen as a generalization of Gray categories.</p>
+
+<p>This theory forms the basis for <a class='existingWikiWord' href='/nlab/show/homotopy.io'>homotopy.io</a>, a proof assistant for higher category theory which is currently under development.</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/semi-strict+infinity-category'>semistrict n-category</a></li>
+</ul>
 </div>
 
 <div class="revisedby">
   <p>
-  Created on December  7, 2018 at 10:01:25.
-  See the <a href="https://ncatlab.org/nlab/history/associative n-categories" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Last revised on December  7, 2018 at 14:37:22.
+  See the <a href="https://ncatlab.org/nlab/history/associative n-category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/associative+n-categories" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  | <a href="https://ncatlab.org/nlab/show/associative n-categories/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/associative+n-category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/associative+n-category/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/associative+n-category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/associative+n-category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/associative n-category/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/associative+n-categories" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/associative+n-category" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/associative+n-categories" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/associative+n-category" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/associative+n-categories" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/associative+n-category" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
