--- a/pages/16889.html
+++ b/pages/16889.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/6829/#Item_87" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/6829/#Item_88" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -641,9 +641,19 @@ margin-left: 0em;
 
 <p>We are extremely grateful to John Baez, Manuel Bärenz, Bruce Bartlett, Eugenia Cheng, Chris Douglas, Eric Finster, Nick Gurski, André Henriques, Samuel Mimram and Dominic Verdon for useful discussions.</p>
 
-<p>Globular will soon followed by a successor tool <em><span class="newWikiWord">homotopy.io<a href="/nlab/new/homotopy.io">?</a></span></em>.</p>
+<p>Globular will soon followed by a successor tool <em><a class="existingWikiWord" href="/nlab/show/homotopy.io">homotopy.io</a></em>.</p>
 
-<p>If you would like to cite <em>Globular</em>, you can use the BiBTeX entry <code>@InProceedings{globular, author={Krzysztof Bar and Aleks Kissinger and Jamie Vicary}, title={Globular: an online proof assistant for higher-dimensional rewriting}, note={\href{http://ncatlab.org/nlab/show/Globular}{ncatlab.org/nlab/show/Globular}}, pages={34:1--34:11}, volume=52, year=2016, booktitle={Leibniz International Proceedings in Informatics}}</code>.</p>
+<p id="HowToCite"> If you would like to cite <em>Globular</em>, you can use the BiBTeX entry</p>
+
+<pre><code>  @InProceedings{
+  globular, 
+  author={Krzysztof Bar and Aleks Kissinger and Jamie Vicary}, 
+  title={Globular: an online proof assistant for higher-dimensional rewriting}, 
+  note={\href{http://ncatlab.org/nlab/show/Globular}{ncatlab.org/nlab/show/Globular}}, 
+  pages={34:1--34:11}, 
+  volume=52, 
+  year=2016, 
+  booktitle={Leibniz International Proceedings in Informatics}}</code></pre>
 
 <h3 id="example_proofs">Example proofs</h3>
 
@@ -870,7 +880,7 @@ margin-left: 0em;
 <h2 id="references">References</h2>
 
 <ul>
-<li>Krzysztof Bar, Aleks Kissinger, Jamie Vicary, <em>Globular: an online proof assistant for higher-dimensional rewriting</em>, <a href="https://arxiv.org/abs/1612.01093">arXiv:1612.01093</a></li>
+<li>Krzysztof Bar, <a class="existingWikiWord" href="/nlab/show/Aleks+Kissinger">Aleks Kissinger</a>, <a class="existingWikiWord" href="/nlab/show/Jamie+Vicary">Jamie Vicary</a>, <em>Globular: an online proof assistant for higher-dimensional rewriting</em>, <a href="https://arxiv.org/abs/1612.01093">arXiv:1612.01093</a></li>
 </ul>
 </body></html>
 
@@ -878,14 +888,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  7, 2018 at 08:57:44.
+  Last revised on December  8, 2018 at 01:59:01.
   See the <a href="https://ncatlab.org/nlab/history/Globular" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Globular" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Globular/52" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(52 revisions)</span> | <a href="/nlab/show/diff/Globular" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Globular" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Globular" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Globular/53" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(53 revisions)</span> | <a href="/nlab/show/diff/Globular" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Globular" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Globular/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
